# webscraping

./: pyproject.toml
imdb250/: imdb.csv  imdb.json
imdb250/imdb250/spiders/: imdb.py
