[tool.poetry]
name = "webscraping"
version = "0.1.0"
description = ""
authors = ["Gian <gianluca.petini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
